Fixed a bug in switch widget component

--- a/src/app/components/widgets/switch/switch.component.html
+++ b/src/app/components/widgets/switch/switch.component.html
@@ -1,4 +1,4 @@
 <label class="switch">
-  <input type="checkbox" [checked]="isChecked" (change)="onchange($event)">
+  <input type="checkbox" [checked]="isChecked" (change)="onchange($event)" />
   <span class="slider round"></span>
 </label>
