Added StripeModule to MainAppModule

--- a/src/app/components/mainapp/mainapp.component.html
+++ b/src/app/components/mainapp/mainapp.component.html
@@ -44,6 +44,19 @@
   </li>
 
   <li
+    title="Billing"
+    class="treeview"
+    routerLinkActive
+    #bill="routerLinkActive"
+    [routerLink]="['billing']"
+    [class.active]="bill.isActive"
+  >
+    <a [routerLink]="['billing']">
+      <i class="fa fa-cc-stripe"></i> <span> Billing</span>
+    </a>
+  </li>
+
+  <li
     title="App Settings"
     class="treeview"
     routerLinkActive
