In design process for billing

--- a/src/app/components/mainapp/billing/billing.component.html
+++ b/src/app/components/mainapp/billing/billing.component.html
@@ -11,13 +11,39 @@
       ></app-detail-box>
     </div>
 
-    <div class="col-md-12">
+    <!-- <div class="col-md-12">
       <form novalidate (ngSubmit)="buy()">
         <div id="card-element" class="field"></div>
         <button type="submit">
           BUY
         </button>
       </form>
+    </div> -->
+  </div>
+  <div class="row">
+    <div class="col-md-12 anim">
+      <div class="box box-primary">
+        <div class="box-header with-border">
+          <h3 class="box-title">Available Packages</h3>
+
+          <div class="box-tools pull-right">
+            <a
+              type="button"
+              style="display:inline-block; width: auto; margin-top: 0;"
+              class="btn btn-block btn-primary"
+              >Reload Packages</a
+            >
+          </div>
+        </div>
+        <!-- /.box-header -->
+        <div class="box-body">
+          <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
