--- a/src/app/components/widgets/package/package.component.html
+++ b/src/app/components/widgets/package/package.component.html
@@ -6,10 +6,10 @@
   <div class="features"></div>
   <div class="price">
     <h4>
-      {{ price }}<span class="period">/{{ period }}</span>
+      ${{ price }}<span class="period">/{{ period }}</span>
     </h4>
   </div>
-  <button class="buy btn btn-block {{ class }}">
+  <button class="buy btn btn-block {{ class }}" (click)="click()">
     {{ buttonText }}
   </button>
 </div>
