--- a/src/app/components/widgets/package/package.component.scss
+++ b/src/app/components/widgets/package/package.component.scss
@@ -1,7 +1,7 @@
 .item {
   background-color: #ffffff;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-  border-top: 2px solid #5ea4f3;
+  border-top: 2px solid #00000088;
   padding: 10px;
   overflow: hidden;
   position: relative;
