--- a/src/app/components/mainapp/billing/billing.component.html
+++ b/src/app/components/mainapp/billing/billing.component.html
@@ -1,5 +1,7 @@
 <app-content-header [title]="'Billing Information'"></app-content-header>
 <section class="content">
+
+
   <div class="row">
     <div class="col-md-12">
       <app-detail-box
@@ -10,60 +12,23 @@
         [percent]="'20%'"
       ></app-detail-box>
     </div>
-
-    <!-- <div class="col-md-12">
-      <form novalidate (ngSubmit)="buy()">
-        <div id="card-element" class="field"></div>
-        <button type="submit">
-          BUY
-        </button>
-      </form>
-    </div> -->
   </div>
   <div class="row">
     <div class="col-md-12 anim">
       <div class="box box-primary">
         <div class="box-header with-border">
           <h3 class="box-title">Available Packages</h3>
-
-          <div class="box-tools pull-right">
-            <a
-              type="button"
-              style="display:inline-block; width: auto; margin-top: 0;"
-              class="btn btn-block btn-primary"
-              >Reload Packages</a
-            >
-          </div>
         </div>
         <!-- /.box-header -->
         <div class="box-body">
-          <div class="row">
-            <div class="col-xs-4">
-              <app-package
-                [title]="'Basic'"
-                [desc]="'This package is $25 per month'"
-                [price]="'$25'"
-                [period]="'month'"
-              ></app-package>
-            </div>
-            <div class="col-xs-4">
-              <app-package
-                [title]="'Standard'"
-                [desc]="'This package is $50 per month'"
-                [price]="'$25'"
-                [class]="'btn-primary'"
-                [period]="'month'"
-              ></app-package>
-            </div>
-            <div class="col-xs-4">
-              <app-package
-                [title]="'Premium'"
-                [desc]="'This package is $100 per month'"
-                [price]="'$25'"
-                [period]="'month'"
-              ></app-package>
-            </div>
-          </div>
+          <form novalidate (ngSubmit)="buy()">
+            <app-package-list
+              (packageClick)="packageClick($event)"
+            ></app-package-list>
+            <swal #billSwal>
+              <ngx-stripe-card [options]="cardOptions" [elementsOptions]="elementsOptions"></ngx-stripe-card>
+            </swal>
+          </form>
         </div>
       </div>
     </div>
