--- a/src/app/components/mainapp/managers/managers.component.html
+++ b/src/app/components/mainapp/managers/managers.component.html
@@ -90,7 +90,7 @@
     >
       <br />
       <div *swalPartial>
-        <br/>
+        <br />
         <div class="box box-primary">
           <ul class="list-group list-group-unbordered">
             <li class="list-group-item">
@@ -113,7 +113,7 @@
             </li>
 
             <div class="row">
-              <br/>
+              <br />
               <div class="col-xs-12">
                 <button
                   (click)="deleteManager()"
@@ -179,7 +179,9 @@
                     (click)="this.selectedManager = manager"
                     class="product-title"
                     >{{ manager.name }}
-                    <span class="label label-success pull-right" *ngIf="false">$1800</span></a
+                    <span class="label label-success pull-right" *ngIf="false"
+                      >$1800</span
+                    ></a
                   >
                   <span class="product-description">
                     {{ manager.email }}
