--- a/src/app/components/widgets/paginater/paginater.component.html
+++ b/src/app/components/widgets/paginater/paginater.component.html
@@ -1,5 +1,7 @@
-<ul class="pagination pagination-sm inline pull-right">
-  <li ><a href="#">&laquo;</a></li>
-  <li></li>
-  <li><a href="#">&raquo;</a></li>
+<ul class="pagination pagination-sm no-margin pull-right">
+<li><a href="#">«</a></li>
+<li><a href="#">1</a></li>
+<li><a href="#">2</a></li>
+<li><a href="#">3</a></li>
+<li><a href="#">»</a></li>
 </ul>
