--- a/src/app/components/mainapp/managers/managers.component.html
+++ b/src/app/components/mainapp/managers/managers.component.html
@@ -61,6 +61,19 @@
             />
           </div>
         </div>
+        <div class="form-group">
+          <label>Choose a Branch</label>
+          <select
+            class="form-control"
+            style="width: 100%;"
+            [(ngModel)]="selectedBranch"
+            name="branch"
+          >
+            <option *ngFor="let branch of branchData" [value]="branch.id">{{
+              branch.name
+            }}</option>
+          </select>
+        </div>
         <div class="form-group has-feedback">
           <label>Password</label>
           <div class="input-group">
@@ -161,7 +174,7 @@
           class="box-body"
           slimScroll
           [enabled]="true"
-          *ngIf="(managerObservable | async) as managerData; else loading"
+          *ngIf="managerData; else loading"
         >
           <div *ngIf="managerData.data.length > 0; else noManager">
             <ul
